feat: update images

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="America's Best Wings at Wheaton Maryland"
+      content="America's Best Wings at Gaithersburg Maryland"
     />
     <meta
       property="og:description"
-      content="America's Best Wings at Wheaton Maryland"
+      content="America's Best Wings at Gaithersburg Maryland"
     />
     <meta
       name="keywords"
-      content="America's Best Wings Wheaton, America's Best Wings, ABW Wheaton, ABW, Wheaton Wings, Maryland Wings"
+      content="America's Best Wings Gaithersburg, America's Best Wings, ABW Gaithersburg, ABW, Gaithersburg Wings, Maryland Wings"
     />
-    <title>America's Best Wings Wheaton</title>
+    <title>America's Best Wings Gaithersburg</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&family=Lato:wght@400;700&display=swap"
